--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 
     <groupId>sunyu.util</groupId>
     <artifactId>util-hbase</artifactId>
-    <version>hbase-shaded-client-1.2.12_v1.0</version>
+    <!-- {hbase-shaded-client.version}_{util.version}_{jdk.version}_{architecture.version} -->
+    <version>1.2.12_1.0_jdk8_x64</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -34,7 +35,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.8.33</version>
+            <version>5.8.36</version>
         </dependency>
         <!-- https://central.sonatype.com/artifact/org.apache.hbase/hbase-shaded-client/versions -->
         <dependency>
@@ -52,14 +53,19 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.2.23</version>
-            <optional>true</optional>
+            <version>1.2.24</version>
+        </dependency>
+        <!-- https://central.sonatype.com/artifact/com.google.guava/guava/versions -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.4.5-jre</version>
         </dependency>
         <!-- https://central.sonatype.com/artifact/org.junit.jupiter/junit-jupiter/versions -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.11.3</version>
+            <version>5.12.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -169,7 +175,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
+                <version>3.14.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
