更改打包方式

--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.2.25</version>
+            <version>1.2.27</version>
         </dependency>
         <!-- https://central.sonatype.com/artifact/com.google.guava/guava/versions -->
         <dependency>
@@ -65,7 +65,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.13.2</version>
+            <version>5.13.4</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -77,69 +77,59 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.6.0</version>
-                <configuration>
-                    <!-- 打包时是否生成dependency-reduced-pom.xml -->
-                    <createDependencyReducedPom>false</createDependencyReducedPom>
-                    <!--只包含该项目代码中用到的jar,在父项目中引入了，但在当前模块中没有用到就会被删掉-->
-                    <minimizeJar>true</minimizeJar>
-                    <!-- 重命名包名解决冲突 -->
-                    <relocations>
-                        <!--<relocation>
-                            <pattern>org.apache.hadoop</pattern>
-                            <shadedPattern>relocation.org.apache.hadoop</shadedPattern>
-                        </relocation>
-                        <relocation>
-                            <pattern>org.apache.htrace</pattern>
-                            <shadedPattern>relocation.org.apache.htrace</shadedPattern>
-                        </relocation>-->
-                    </relocations>
-                </configuration>
                 <executions>
                     <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
                         <configuration>
+                            <!-- 添加以下配置来禁用 dependency-reduced-pom.xml 文件生成 -->
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <relocations>
+                                <!--<relocation>
+                                    <pattern>com.fasterxml.jackson</pattern>
+                                    <shadedPattern>shaded.com.fasterxml.jackson</shadedPattern>
+                                </relocation>-->
+                            </relocations>
+                            <shadedArtifactAttached>true</shadedArtifactAttached>
+                            <shadedClassifierName>shaded</shadedClassifierName>
                             <filters>
-                                <!--<filter>
-                                    <artifact>org.apache.htrace:htrace-core</artifact>
-                                    <includes>
-                                        <include>**</include>
-                                    </includes>
-                                </filter>
-                                <filter>
-                                    <artifact>org.apache.hadoop:hadoop-common</artifact>
-                                    <includes>
-                                        <include>**</include>
-                                    </includes>
-                                </filter>-->
                                 <filter>
                                     <artifact>*:*</artifact>
                                     <excludes>
+                                        <exclude>assets/**</exclude>
+                                        <exclude>license/**</exclude>
                                         <exclude>META-INF/**</exclude>
-
+                                        <exclude>mozilla/**</exclude>
+                                        <exclude>schema/**</exclude>
+                                        <exclude>model/**</exclude>
+                                        <exclude>darwin/**</exclude>
+                                        <exclude>linux/**</exclude>
+                                        <exclude>org/xerial/**</exclude>
+                                        <exclude>win32/**</exclude>
+                                        <exclude>kafka/**</exclude>
                                         <exclude>support/**</exclude>
                                         <exclude>tables/**</exclude>
                                         <exclude>tpcds/**</exclude>
                                         <exclude>tpch/**</exclude>
                                         <exclude>edu/**</exclude>
 
-                                        <exclude>common-version-info.properties</exclude>
-                                        <exclude>core-default.xml</exclude>
-                                        <exclude>digesterRules.xml</exclude>
-                                        <exclude>hbase-default.xml</exclude>
-                                        <exclude>lockback.xml</exclude>
-                                        <exclude>log4j.xml</exclude>
-                                        <exclude>mapred-default.xml</exclude>
-                                        <exclude>properties.dtd</exclude>
-                                        <exclude>PropertyList-1.0.dtd</exclude>
-                                        <exclude>yarn-default.xml</exclude>
-                                        <exclude>yarn-version-info.properties</exclude>
+                                        <exclude>*.crx</exclude>
+                                        <exclude>*.properties</exclude>
+                                        <exclude>*.xml</exclude>
+                                        <exclude>*.ini</exclude>
+                                        <exclude>*.html</exclude>
+                                        <exclude>*.mappings</exclude>
+                                        <exclude>*.png</exclude>
+                                        <exclude>*.dtd</exclude>
+
+                                        <exclude>LICENSE</exclude>
+                                        <exclude>NOTICE</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
                         </configuration>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
                     </execution>
                 </executions>
             </plugin>
@@ -177,9 +167,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <encoding>UTF-8</encoding>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
         </plugins>
